# bridge-of-dream-ai

./: LICENSE
api/: .gitignore  google_search_debug.html  main.py  pyproject.toml  readme.md  requirements.txt  scratch.html  test_connections.py
api/app/: deps.py  router.py
api/core/: cloudinary.py  langchain.py  supabase.py
api/decorators/: auth_decorators.py  context_decorators.py
api/enums/: request_status.py
api/middleware/: auth_middleware.py
api/modules/apply_link/: apply_link_route.py  apply_link_schema.py  apply_link_service.py
api/modules/auth/: routes_auth.py  schema_auth.py  services_auth.py
api/modules/connections/: routes_connections.py  schema_connections.py  services_connections.py
api/modules/general/: __init__.py  general_route.py  general_schema.py  general_service.py
api/modules/job_applied/: job_applied_route.py  job_applied_schema.py  job_applied_service.py
api/modules/jobs_search/: job_search_route.py  job_search_schema.py  job_search_service.py
api/modules/request/: routes_request.py  schema_request.py  services_request.py
api/modules/resume_ats/: resume_ats_route.py  resume_ats_schema.py  resume_ats_service.py
api/modules/save_jobs/: routes_save_jobs.py  schema_save_jobs.py  services_save_jobs.py
api/modules/user/: routes_user.py  schema_user.py  services_user.py
api/shared/database/: model_admin.py  model_ats_resume.py  model_connection.py  model_job_applied.py  model_last_search.py  model_otp.py  model_request.py  model_resume.py  model_saved_job.py  model_user.py
api/shared/mail/: mail_service.py
(+102 files in other folders)
